--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,4 @@
-@media (max-width: 640px){
+@media screen (max-width: 640px){
 	body{
 		margin: 0px;
 		font-family: 'Montserrat', sans-serif;
@@ -259,7 +259,7 @@
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
-@media (min-width: 641px){
+@media screen (min-width: 641px){
 
 	body{
 		margin: 0px;
